# movie-render

./: .gitignore  README.md  main.py  pyproject.toml  render_max_projected_with_roi.py  requirements.txt  setup.py
docs/: main.md
movierender/: __init__.py
movierender/config/: __init__.py  _cfg_movie.py  _cfg_panel.py  _panel_header_reader.py
movierender/layouts/: __init__.py  _base_composer.py  _channel_column_composer.py  _channel_zstack_composer.py  _column_composer.py  _composite_composer.py  _static_panel.py  single.py  single_ch_all_z.py  two_ch_composite.py  two_channels.py
movierender/overlays/: __init__.py  _experiment.py  _histogram.py  _image.py  _roi.py  _text.py  _timeseries.py  overlay.py  pixel_tools.py
movierender/plugins/: overlay.py
movierender/plugins/fileops/: __init__.py  _movie_header_reader.py  _panel_header_reader.py
movierender/render/: __init__.py  _image.py  _parallel.py  _sequential.py  movie.py  pipelines.py
movierender/render/pipelines/: __init__.py  _image_pipeline_base.py  _image_pipeline_composite_rgb.py  _image_pipeline_null.py  _image_pipeline_single.py
movierender/scripts/: _render_configfile.py  _render_folder.py  _render_movie.py  _render_panel.py  export.py  render.py
overlays/: __init__.py  _experiment.py  _image.py  overlay.py
render/: __init__.py  movie.py
test/: render.py
test/example_data/: 20231122 - JupMCh SqhGFP  test.cfg  test_frames_movie.cfg  test_frames_movie_ch_swap.cfg  test_panels.cfg  test_panels_movie.cfg
