[project]
name = "movierender"

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
#
# For a discussion on single-sourcing the version, see
# https://packaging.python.org/guides/single-sourcing-package-version/
version = "0.2.0"
# bump 0.1.0 (to 0.3.0)
# - now frames are rendered using threads in parallel
# - add classes to read header MOVIE from fileops config files; these are implemented as plugins of fileops

# This is a one-line description or tagline of what your project does. This
# corresponds to the "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary
description = "A package for rendering images and overlay data to video; designed for microscopy data."

# This is an optional longer description of your project that represents
# the body of text which users will see when they visit PyPI.
#
# Often, this is the same as your README, so you can just read it in from
# that file directly (as we have already done above)
#
# This field corresponds to the "Description" metadata field:
# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md"

# Specify which Python versions you support. In contrast to the
# 'Programming Language' classifiers above, 'pip install' will check this
# and refuse to install the project if the version does not match. See
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.9"

# This is either text indicating the license for the distribution, or a file
# that contains the license
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = "AGPL-3.0-only"
license-files = ["LICENSE.txt"]

# This field adds keywords for your project which will appear on the
# project page. What does your project relate to?
#
# Note that this is a list of additional keywords, separated
# by commas, to be used to assist searching for the distribution in a
# larger catalog.
keywords = ["movie", "render", "microscopy", ]

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
    { name = "Fabio Rodrigo Echegaray Iturra", email = "fabio.echegaray@gmail.com" }
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
    { name = "Fabio Rodrigo Echegaray Iturra", email = "fabio.echegaray@gmail.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [# Optional
    # How mature is this project? Common values are
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Science/Research",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "python_requires" below.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    # OS supported
    "Operating System :: OS Independent",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    "asyncpool~=1.0",
    "beautifulsoup4~=4.12.3",
    "descartes==1.1.0",
    "matplotlib>=3.2.0",
    "moviepy>=1.0.3,<2",
    "numpy>=1.16.0",
    "pandas~=1.5",
    "pyqt5~=5.15.2",
    "seaborn~=0.13",
    "scikit_image~=0.24",
    "scipy~=1.14",
    "Shapely~=2.0.4",
    "tifffile~=2024.6.18",
    "imgfileops>=0.3.0",
    "typer>=0.9.0",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
#[project.optional-dependencies] # Optional
#dev = ["check-manifest"]
#test = ["coverage"]

# URLs that are relevant to the project
[project.urls]  # Optional
"Homepage" = "https://github.com/fabio-echegaray/movierender"
"Bug Reports" = "https://github.com/fabio-echegaray/movierender/issues"
# "Funding" = "https://donate.pypi.org"
# "Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/fabio-echegaray/movierender"

[project.entry-points.'fileops.plugins.config.types']
movie = 'movierender.config:ConfigMovie'
panel = 'movierender.config:ConfigPanel'

[project.entry-points.'fileops.plugins.config.header_readers']
movie_header_reader = 'movierender.config:MovieHeaderReaderPlugin'
panel_header_reader = 'movierender.config:PanelHeaderReaderPlugin'

[tool.setuptools.packages.find]
include = ["movierender*"] # Only include the 'movierender' package and its subpackages

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
movierender = "movierender.scripts:render.app"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["hatchling", "wheel>=0.40", "numpy>=1.15"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["movierender"]
